--- a/css/alfgow.css
+++ b/css/alfgow.css
@@ -1,31 +1,3 @@
-@font-face {
-    font-family: alfgow;
-    src: url('../fonts/charter-regular.otf');
-    font-style: normal;
-    font-weight: normal;
-}
-
-@font-face {
-    font-family: alfgow;
-    src: url('../fonts/charter-italic.otf');
-    font-style: italic;
-    font-weight: normal;
-}
-
-@font-face {
-    font-family: alfgow;
-    src: url('../fonts/charter-bold.otf');
-    font-style: normal;
-    font-weight: bold;
-}
-
-@font-face {
-    font-family: alfgow;
-    src: url('../fonts/charter-bold-italic.otf');
-    font-style: italic;
-    font-weight: bold;
-}
-
 :root{
     font-size: 16px;
     --white30: white;
@@ -44,11 +16,58 @@ body {
     margin-block: ; */
 }
 
-a {
+html {
+    scroll-behavior: smooth;
+}
+
+.debug {
+    /* 
+    outline: 2px solid red; 
+    Para mi caso personal utilizare el box-shadow
+    */
+    box-shadow: 0 0 20px yellowgreen;
+}
+
+/* Header */
+.header {
+   
+}
+
+.header-content {
+    padding-inline-start: 20px;
+}
+
+header {
+    margin-block-start: 20px;
+    font-size: 14px;
+    color: var(--white30);
+    
+    /* Le vamos a dar el ancho al bloque de acuerdo al ancho
+    disponible en pantalla, evitando el scrooling
+    width: 50vw; */ 
+}
+
+header a {
+   color: var(--white20);
+   text-decoration: none;
+}
+
+header a:hover{
     color: var(--white30);
 }
 
+header li {
+    color: var(--white20);
+    margin-block-end: 16px;
+}
 
+nav details summary {
+    font-weight: bold;
+}
+
+a {
+    color: var(--white30);
+}
 
 .main hr {
     display: none;
@@ -89,41 +108,7 @@ h3 {
     margin-block: 16px;
 }
 
-.header {
-   
-}
 
-.header-content {
-    padding-inline-start: 20px;
-}
-
-header {
-    margin-block-start: 20px;
-    font-size: 14px;
-    color: var(--white30);
-    
-    /* Le vamos a dar el ancho al bloque de acuerdo al ancho
-    disponible en pantalla, evitando el scrooling
-    width: 50vw; */ 
-}
-
-header a {
-   color: var(--white20);
-   text-decoration: none;
-}
-
-header a:hover{
-    color: var(--white30);
-}
-
-header li {
-    color: var(--white20);
-    margin-block-end: 16px;
-}
-
-nav details summary {
-    font-weight: bold;
-}
 
 pre {
     background: var(--white10);
